plugins {
	id 'java'
}

repositories {
	maven {
		url = 'https://repo.runelite.net'
	}
	mavenCentral()
	mavenLocal()
}

def runeLiteVersion = 'latest.release'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
	compileOnly 'org.projectlombok:lombok:1.18.40'
	annotationProcessor 'org.projectlombok:lombok:1.18.40'
	testImplementation 'junit:junit:4.13.1'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}


group = 'com.flippingcopilot'
version = '1.7.22'

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = 'com.flippingcopilot.FlipVaultPluginTest'
	enableAssertions = true
	jvmArgs = ['-ea', '--add-exports', 'java.desktop/com.apple.eawt=ALL-UNNAMED']
}
